@@ -11,4 +11,3 @@ Add more error checking
 Add support for multiple MCMC chains when calling MLwiN
 Automate multiple imputation (maybe using mi package)
 Allow display of models results in alternative measures (e.g. correlations, standard deviations, etc)
-Allow unlabelled vectors to work with the trajectories function
