@@ -1,3 +1,7 @@
+Fri Apr 1 2015
+1. Bug fixing
+   * Allow trajectories function to work with a simple unlabelled vector
+
 Tue Mar 10 2015
 1. Bug fixing
    * Display the correct number of observations in the output for mixed response models
